2006-05-18  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/plaf/basic/BasicToolBarUI.java:
	(navigateFocusedComp): Marked as stub.
	(createRolloverBorder): Create a different Border instance, added note.
	* javax/swing/plaf/metal/MetalBorders.java:
	(ButtonBorder): Added documentation.
	(ButtonBorder.paintDefaultButtonBorder): Added else-block.
	(ButtonBorder.paintOceanButtonBorder): Added else-block, added
	subexpression into if-else cascade, added note.

2006-05-18  Lillian Angel  <langel@redhat.com>

	* java/awt/font/ShapeGraphicAttribute.java:
	Documented entire class.
	(ShapeGraphicAttribute): Initialized bounds field.
	(draw): Implemented.
	(equals): Implemented.
	(getAdvance): Implemented.
	(getAscent): Implemented.
	(getBounds): Implemented.
	(getDescent): Implemented.
	(hashCode): Implemented.

2006-05-18  Roman Kennke <kennke@aicas.com>

	* javax/swing/CellRendererPane.java
	(CellRendererPane): Set CellRendererPane to invisible.

2006-05-18  Roman Kennke <kennke@aicas.com>

	* gnu/java/awt/peer/gtk/GdkGraphics.java
	(clipRect): Removed old intersection statement.

2006-05-18  Roman Kennke <kennke@aicas.com>

	* gnu/java/awt/peer/gtk/GdkGraphics.java
	(clipRect): Don't use Rectangle.intersection() to avoid creating
	2 unnecessary Rectangle instances and fix a clipping problem.
	(computeIntersection): New helper method, adapted from SwingUtilities.

2006-05-18  Roman Kennke <kennke@aicas.com>

	* javax/swing/JComponent.java
	(isCompletelyDirty): Removed.
	(paint): Don't mark children as clean, this is no longer necessary.
	(findOverlapFreeParent): Don't stop at Viewports, this breaks
	painting when something overlaps the viewport (like a popup/menu).
	* javax/swing/RepaintManager.java
	(currentRepaintManagers): Made package private to avoid accessor
	methods.
	(dirtyComponents): Made private.
	(dirtyComponentsWork): Made private.
	(markCompletelyDirty): Fixed bounds of dirtyrect to be